fix(prod): set implicit redirect URIs for production

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,6 +16,11 @@
   "observability": {
     "enabled": true
   },
+  "vars": {
+    "GITHUB_REDIRECT_URI": "https://blog.ichimarugin728.com/login/github/callback",
+    "GOOGLE_REDIRECT_URI": "https://blog.ichimarugin728.com/login/google/callback",
+    "DISCORD_REDIRECT_URI": "https://blog.ichimarugin728.com/login/discord/callback"
+  },
   "assets": {
     "directory": "./dist",
     "binding": "ASSETS"
