--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,7 +14,15 @@
     }
   ],
   "observability": {
-    "enabled": true
+    "logs": {
+      "enabled": true,
+      "invocation_logs": true,
+      "head_sampling_rate": 1
+    },
+    "traces": {
+      "enabled": true,
+      "head_sampling_rate": 1
+    }
   },
   "vars": {
     "GITHUB_REDIRECT_URI": "https://blog.ichimarugin728.com/login/github/callback",
