feat: Implement RSS feed, redesign Open Graph images, add a Markdown image component, and introduce a custom 404 page.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/cloudflare": "latest",
     "@astrojs/preact": "latest",
+    "@astrojs/rss": "^4.0.15",
     "@hono/zod-validator": "^0.7.6",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@resvg/resvg-wasm": "^2.6.2",
     "arctic": "latest",
     "astro": "latest",
+    "astro-remote": "^0.3.4",
     "drizzle-orm": "latest",
     "hono": "latest",
     "marked": "^17.0.1",
