feat: Implement sitemap generation and enhance admin panel with full post archive and delete functionality.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/cloudflare": "latest",
     "@astrojs/preact": "latest",
     "@astrojs/rss": "^4.0.15",
+    "@astrojs/sitemap": "^3.7.0",
     "@hono/zod-validator": "^0.7.6",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
