feat: Add smart placement mode configuration to wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,6 +13,9 @@
       "custom_domain": true
     }
   ],
+  "placement": {
+    "mode": "smart"
+  },
   "observability": {
     "logs": {
       "enabled": true,
