--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,86 +1,84 @@
 {
-  "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "gins-blog",
-  "account_id": "cd4ce461acea5097153abf9e2deb26ec",
-  "main": "./dist/_worker.js/index.js",
-  "compatibility_date": "2026-01-20",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
-  "routes": [
-    {
-      "pattern": "blog.ichimarugin728.com",
-      "custom_domain": true
-    }
-  ],
-  "placement": {
-    "mode": "smart"
-  },
-  "observability": {
-    "logs": {
-      "enabled": true,
-      "invocation_logs": true,
-      "head_sampling_rate": 1
-    },
-    "traces": {
-      "enabled": true,
-      "head_sampling_rate": 1
-    }
-  },
-  "vars": {
-    "GITHUB_REDIRECT_URI": "https://blog.ichimarugin728.com/login/github/callback",
-    "GOOGLE_REDIRECT_URI": "https://blog.ichimarugin728.com/login/google/callback",
-    "DISCORD_REDIRECT_URI": "https://blog.ichimarugin728.com/login/discord/callback"
-  },
-  "assets": {
-    "directory": "./dist",
-    "binding": "ASSETS"
-  },
-  "kv_namespaces": [
-    {
-      "binding": "GIN_KV",
-      "id": "d749e0c6642747248d4db6d3393573db",
-      "preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
-    },
-    {
-      "binding": "SESSION",
-      "id": "d749e0c6642747248d4db6d3393573db", // Reusing ID for now as placeholder, user likely needs to create new one
-      "preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
-    },
-    {
-      "binding": "GINS_CACHE",
-      "id": "d749e0c6642747248d4db6d3393573db", // Using same placeholder, user will update if needed
-      "preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
-    }
-  ],
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "gins-blog-db",
-      "database_id": "1a05c007-b063-416f-b589-e8f9c5c079e8"
-    }
-  ],
-  "r2_buckets": [
-    {
-      "binding": "BUCKET",
-      "bucket_name": "gins-media"
-    }
-  ],
-  "queues": {
-    "producers": [
-      {
-        "binding": "MY_QUEUE",
-        "queue": "gins-queue"
-      }
-    ]
-  },
-  "vectorize": [
-    {
-      "binding": "VECTOR_INDEX",
-      "index_name": "gins-vector"
-    }
-  ],
-  "ai": {
-    "binding": "AI"
-  }
+	"$schema": "node_modules/wrangler/config-schema.json",
+	"name": "gins-blog",
+	"account_id": "cd4ce461acea5097153abf9e2deb26ec",
+	"main": "./dist/_worker.js/index.js",
+	"compatibility_date": "2026-01-20",
+	"compatibility_flags": ["nodejs_compat"],
+	"routes": [
+		{
+			"pattern": "blog.ichimarugin728.com",
+			"custom_domain": true
+		}
+	],
+	"placement": {
+		"mode": "smart"
+	},
+	"observability": {
+		"logs": {
+			"enabled": true,
+			"invocation_logs": true,
+			"head_sampling_rate": 1
+		},
+		"traces": {
+			"enabled": true,
+			"head_sampling_rate": 1
+		}
+	},
+	"vars": {
+		"GITHUB_REDIRECT_URI": "https://blog.ichimarugin728.com/login/github/callback",
+		"GOOGLE_REDIRECT_URI": "https://blog.ichimarugin728.com/login/google/callback",
+		"DISCORD_REDIRECT_URI": "https://blog.ichimarugin728.com/login/discord/callback"
+	},
+	"assets": {
+		"directory": "./dist",
+		"binding": "ASSETS"
+	},
+	"kv_namespaces": [
+		{
+			"binding": "GIN_KV",
+			"id": "d749e0c6642747248d4db6d3393573db",
+			"preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
+		},
+		{
+			"binding": "SESSION",
+			"id": "d749e0c6642747248d4db6d3393573db", // Reusing ID for now as placeholder, user likely needs to create new one
+			"preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
+		},
+		{
+			"binding": "GINS_CACHE",
+			"id": "d749e0c6642747248d4db6d3393573db", // Using same placeholder, user will update if needed
+			"preview_id": "171ef5dabf7e4c83ad560b8cd85cacb9"
+		}
+	],
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "gins-blog-db",
+			"database_id": "1a05c007-b063-416f-b589-e8f9c5c079e8"
+		}
+	],
+	"r2_buckets": [
+		{
+			"binding": "BUCKET",
+			"bucket_name": "gins-media"
+		}
+	],
+	"queues": {
+		"producers": [
+			{
+				"binding": "MY_QUEUE",
+				"queue": "gins-queue"
+			}
+		]
+	},
+	"vectorize": [
+		{
+			"binding": "VECTOR_INDEX",
+			"index_name": "gins-vector"
+		}
+	],
+	"ai": {
+		"binding": "AI"
+	}
 }
