--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -72,13 +72,13 @@
 			}
 		]
 	},
-	"vectorize": [
-		{
-			"binding": "VECTOR_INDEX",
-			"index_name": "gins-vector"
-		}
-	],
-	"ai": {
-		"binding": "AI"
-	}
+	// "vectorize": [
+	// 	{
+	// 		"binding": "VECTOR_INDEX",
+	// 		"index_name": "gins-vector"
+	// 	}
+	// ],
+	// "ai": {
+	// 	"binding": "AI"
+	// }
 }
