Refactor: docs site, update deps, cleanup comments, format codebase

--- a/package.json
+++ b/package.json
@@ -31,29 +31,29 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@resvg/resvg-wasm": "^2.6.2",
 		"arctic": "latest",
-		"astro": "^5.17.1",
+		"astro": "^5.18.0",
 		"astro-loading-indicator": "^0.7.1",
 		"astro-remote": "^0.3.4",
 		"drizzle-orm": "latest",
 		"hono": "latest",
-		"marked": "^17.0.1",
+		"marked": "^17.0.3",
 		"minimist": "^1.2.8",
 		"oslo": "latest",
 		"preact": "latest",
-		"satori": "^0.19.1",
+		"satori": "^0.19.2",
 		"typescript": "^5.9.3",
-		"ua-parser-js": "^2.0.8",
-		"zod": "^3.25.76"
+		"ua-parser-js": "^2.0.9",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "latest",
+		"@biomejs/biome": "^2.4.4",
 		"@iconify-json/heroicons": "^1.2.3",
 		"@iconify-json/logos": "^1.2.10",
-		"@iconify-json/simple-icons": "^1.2.68",
+		"@iconify-json/simple-icons": "^1.2.71",
 		"@types/node": "latest",
-		"dotenv": "^17.2.3",
+		"dotenv": "^17.3.1",
 		"drizzle-kit": "latest",
-		"inquirer": "^13.2.2",
+		"inquirer": "^13.3.0",
 		"unocss": "latest",
 		"wrangler": "latest"
 	}
