--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -29,7 +29,8 @@
 		"GITHUB_REDIRECT_URI": "https://blog.ichimarugin728.com/login/github/callback",
 		"GOOGLE_REDIRECT_URI": "https://blog.ichimarugin728.com/login/google/callback",
 		"DISCORD_REDIRECT_URI": "https://blog.ichimarugin728.com/login/discord/callback",
-		"PUBLIC_CF_AVATAR_ID": "d0a6d84a-f3b2-4be8-1c43-f17ea5abc000"
+		"PUBLIC_CF_AVATAR_ID": "d0a6d84a-f3b2-4be8-1c43-f17ea5abc000",
+		"CLOUDFLARE_ACCOUNT_HASH": "M82pPQiNYSyK_UjCktOIJA"
 	},
 	"assets": {
 		"directory": "./dist",
