--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@astrojs/check": "^0.9.6",
 		"@astrojs/cloudflare": "^12.6.12",
 		"@astrojs/mdx": "^4.3.13",
-		"@astrojs/preact": "latest",
+		"@astrojs/preact": "^4.1.3",
 		"@astrojs/rss": "^4.0.15",
 		"@astrojs/sitemap": "^3.7.0",
 		"@fontsource-variable/inter": "^5.2.8",
@@ -30,16 +30,16 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@resvg/resvg-wasm": "^2.6.2",
-		"arctic": "latest",
+		"arctic": "^3.7.0",
 		"astro": "^5.18.0",
 		"astro-loading-indicator": "^0.7.1",
 		"astro-remote": "^0.3.4",
-		"drizzle-orm": "latest",
-		"hono": "latest",
+		"drizzle-orm": "^0.45.1",
+		"hono": "^4.12.3",
 		"marked": "^17.0.3",
 		"minimist": "^1.2.8",
-		"oslo": "latest",
-		"preact": "latest",
+		"oslo": "^1.2.1",
+		"preact": "^10.28.4",
 		"satori": "^0.19.2",
 		"typescript": "^5.9.3",
 		"ua-parser-js": "^2.0.9",
@@ -50,11 +50,11 @@
 		"@iconify-json/heroicons": "^1.2.3",
 		"@iconify-json/logos": "^1.2.10",
 		"@iconify-json/simple-icons": "^1.2.71",
-		"@types/node": "latest",
+		"@types/node": "^25.3.2",
 		"dotenv": "^17.3.1",
-		"drizzle-kit": "latest",
+		"drizzle-kit": "^0.31.9",
 		"inquirer": "^13.3.0",
-		"unocss": "latest",
-		"wrangler": "latest"
+		"unocss": "^66.6.2",
+		"wrangler": "^4.69.0"
 	}
 }
